load("//tools/lint:go.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "tokenbucket.go",
    ],
    importpath = "github.com/scionproto/scion/router/tokenbucket",
    visibility = ["//visibility:public"],
    deps = [
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "tokenbucket_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "@com_github_stretchr_testify//assert:go_default_library",
    ],
)