load("//tools/lint:go.bzl", "go_library")
load("//:scion.bzl", "scion_go_binary")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/scionproto/scion/tools/end2end_hbird",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/addr:go_default_library",
        "//pkg/daemon:go_default_library",
        "//pkg/hummingbird:go_default_library",
        "//pkg/log:go_default_library",
        "//pkg/private/common:go_default_library",
        "//pkg/private/serrors:go_default_library",
        "//pkg/private/util:go_default_library",
        "//pkg/slayers/path/hummingbird:go_default_library",
        "//pkg/snet:go_default_library",
        "//pkg/snet/metrics:go_default_library",
        "//pkg/snet/path:go_default_library",
        "//pkg/sock/reliable:go_default_library",
        "//private/keyconf:go_default_library",
        "//private/topology:go_default_library",
        "//private/tracing:go_default_library",
        "//router/control:go_default_library",
        "//tools/integration:go_default_library",
        "//tools/integration/integrationlib:go_default_library",
        "@com_github_opentracing_opentracing_go//:go_default_library",
        "@com_github_opentracing_opentracing_go//ext:go_default_library",
    ],
)

scion_go_binary(
    name = "end2end_hbird",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
